Fixed spacing and buttons

--- a/StartupWebpage/resources/style.css
+++ b/StartupWebpage/resources/style.css
@@ -26,22 +26,21 @@ body {
 
 /*Home*/
 
-#home {
-
+#home-container {
     width: 100%;
     height: 850px;
     background-size: cover;
     background-position: center;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     position: relative;
     overflow: hidden;
+
 }
 
-#home::before {
+
+#home-container::before {
     content: "";
     position: absolute;
     top: 0;
@@ -53,12 +52,15 @@ body {
     z-index: -1;
 }
 
+
+
 #navigation {
     display: flex;
     flex-direction: row;
     justify-content: center;
     list-style: none;
     gap: 45px;
+    margin-top: 85px;
 }
 
 #navigation li {
@@ -457,7 +459,8 @@ button:hover {
     color: #FFFFFF;
 }
 
-form .submit {
+#login-btn,
+#signup-btn {
     background-color: #482BE7;
     border: none;
     font-weight: 500;
@@ -465,7 +468,8 @@ form .submit {
     line-height: 144%;
 }
 
-form .submit:hover {
+#login-btn:hover,
+#signup-btn:hover {
     background-color: #1E0E62;
 }
 
